--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
-    "react-navigation-native": "0.0.0"
+    "react-navigation-native": "0.0.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
