--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
     "react-navigation-native": "0.0.0",
+    "styled-components": "^5.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
