--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^6.1.3",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.6",
+    "@types/styled-components-react-native": "^5.1.1",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.4",
@@ -31,7 +32,8 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/styled-components": "^5.1.12"
   },
   "private": true
 }
